# opencv

./: .gitignore
apps/: CMakeLists.txt
apps/ip301w/: CMakeLists.txt  README.md  fback_ip301w.cpp
cmake/: OpenCVCompilerOptions.cmake
samples/cpp/: fback_ip301w.cpp
